# distributed-orders

./: .env  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 05a98e6c1f93_create_orders_table.py  c260c9fb5586_create_orders_table.py
app/: main.py
app/application/use_cases/: order_use_case.py
app/domain/: schemas.py
app/domain/entities/: order.py
app/infra/: database.py  repositories.py
app/interface/: order_controller.py
app/presentation/: routes.py
