[tool.poetry]
name = "distributed-orders"
version = "0.1.0"
description = ""
authors = ["Nicole Barros"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.8"
psycopg2-binary = "^2.9.10"
asyncpg = "^0.30.0"
alembic = "^1.14.1"
sqlalchemy = "^2.0.38"
pydantic = "^2.10.6"
uvicorn = "^0.34.0"
pydantic-settings = "^2.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
